--- a/.env.example
+++ b/.env.example
@@ -41,30 +41,30 @@ mapcir_local_write_timeout=3
 # IDLE interval (milliseconds)
 mapcir_local_idle_interval=100
 
-# Directions API (path1,path2,...)
-mapcir_route_directions=/directions,/maps/api/directions/json
+# Directions API (/path1,/path2,...)
+mapcir_route_directions=
 
-# Geocoding API (path1,path2,...)
-mapcir_route_geocode=/geocode,/maps/api/geocode/json
+# Geocoding API (/path1,/path2,...)
+mapcir_route_geocode=
 
-# Distance Matrix API (path1,path2,...)
-mapcir_route_distancematrix=/distancematrix,/maps/api/distancematrix/json
+# Distance Matrix API (/path1,/path2,...)
+mapcir_route_distancematrix=
 
-# Place Details API (path1,path2,...)
-mapcir_route_placedetails=/placedetails,/maps/api/place/details/json
+# Place Details API (/path1,/path2,...)
+mapcir_route_placedetails=
 
-# Find Place API (path1,path2,...)
-mapcir_route_findplacefromtext=/findplacefromtext,/maps/api/place/findplacefromtext/json
+# Find Place API (/path1,/path2,...)
+mapcir_route_findplacefromtext=
 
-# Text Search API (path1,path2,...)
-mapcir_route_textsearch=/textsearch,/maps/api/place/textsearch/json
+# Text Search API (/path1,/path2,...)
+mapcir_route_textsearch=
 
-# Nearby Search API (path1,path2,...)
-mapcir_route_nearbysearch=/nearbysearch,/maps/api/place/nearbysearch/json
+# Nearby Search API (/path1,/path2,...)
+mapcir_route_nearbysearch=
 
-# Place Autocomplete API (path1,path2,...)
-mapcir_route_autocomplete=/autocomplete,/maps/api/place/autocomplete/json
+# Place Autocomplete API (/path1,/path2,...)
+mapcir_route_autocomplete=
 
-# Query Autocomplete API (path1,path2,...)
-mapcir_route_queryautocomplete=/queryautocomplete,/maps/api/place/queryautocomplete/json
+# Query Autocomplete API (/path1,/path2,...)
+mapcir_route_queryautocomplete=
 
